--- a/wp-content/themes/understrap-child/sass/theme/modules/messages.scss
+++ b/wp-content/themes/understrap-child/sass/theme/modules/messages.scss
@@ -1,5 +1,4 @@
 .woocommerce-message, .woocommerce-error {
-	display: none;
 	position: fixed;
 	left: 2%;
 	bottom: 0;
